@@ -2,6 +2,6 @@
 #define HDDTEMP_H_
 
 int scan_hddtemp(const char *arg, char **dev, char **addr, int *port, char **temp);
-char *get_hddtemp_info(char *dev, char *addr, int port, char *unit);
+char *get_hddtemp_info(char *dev, char *addr, int port/*, char *unit*/);
 
 #endif /*HDDTEMP_H_*/
