@@ -3,6 +3,7 @@
 	tracker bug #2166612)
 	* Allow more than 9 CPUs for CPU stats (bug 2155500)
 	* Fix broken $execbar (bug 2133709)
+	* Don't put unit with hddtemp values for consistency (bug 2133107)
 
 2008-12-06
 	* Switching from svn to git repository.  The repo can be viewed from
